--- a/website/src/messaging.html
+++ b/website/src/messaging.html
@@ -8,7 +8,7 @@ templateEngineOverride: njk
 
 <section id="article" class="bg-secondary-bg-light dark:bg-secondary-bg-dark py-[95px] px-5">
     <div class="container">
-        {% mdInclude "sections/learn_more.md" %}
+        {% mdInclude "sections/messaging.md" %}
     </div>
 </section>
 
