deploy: 239e6d114d83be59a446dea8ea26908b58e0c7b8

--- a/bg/index.html
+++ b/bg/index.html
@@ -912,7 +912,7 @@ window.addEventListener('scroll',changeHeaderBg);
     Online retailers know that people with lower incomes are more likely to make urgent purchases, so they may charge higher prices or remove discounts.
 </p>
 <p>
-    Some financial and insurance companies use social graphs to determine interest rates and premiums. It often makes people with lower incomes pay more — it is known as <a href="https://fairbydesign.com/povertypremium/" target="_blank">'poverty premium'</a>.
+    Some financial and insurance companies use social graphs to determine interest rates and premiums. It often makes people with lower incomes pay more — it is known as <a href="https://fairbydesign.com/povertypremium/" target="_blank">"poverty premium"</a>.
 </p>
 <p>
     SimpleX network protects the privacy of your connections better than any alternative, fully preventing your social graph becoming available to any companies or organizations. Even when people use servers preconfigured in SimpleX Chat apps, server operators do not know the number of users or their connections.
@@ -1003,7 +1003,7 @@ window.addEventListener('scroll',changeHeaderBg);
     One of the most shocking stories is the experience of <a href="https://en.wikipedia.org/wiki/Mohamedou_Ould_Slahi" target="_blank">Mohamedou Ould Salahi</a> described in his memoir and shown in The Mauritanian movie. He was put into Guantanamo camp, without trial, and was tortured there for 15 years after a phone call to his relative in Afghanistan, under suspicion of being involved in 9/11 attacks, even though he lived in Germany for the previous 10 years.
 </p>
 <p>
-    Ordinary people get arrested for what they share online, even via their 'anonymous' accounts, <a href="https://www.dailymail.co.uk/news/article-11282263/Moment-police-swoop-house-devout-catholic-mother-malicious-online-posts.html" target="_blank">even in democratic countries</a>.
+    Ordinary people get arrested for what they share online, even via their "anonymous" accounts, <a href="https://www.dailymail.co.uk/news/article-11282263/Moment-police-swoop-house-devout-catholic-mother-malicious-online-posts.html" target="_blank">even in democratic countries</a>.
 </p>
 <p>
     It is not enough to use an end-to-end encrypted messenger, we all should use the messengers that protect the privacy of our personal networks — who we are connected with.
@@ -2061,7 +2061,7 @@ window.addEventListener("load", function () {
                     <li> DNS-based addresses</li>
                     <li> Public key or some other globally unique ID</li>
                     <li> SimpleX релетата не могат да компрометират E2E криптирането. Проверете кода за сигурност, за да предотвратите атаката по външен носител</li>
-                    <li> If operator’s servers are compromised. Verify security code in Signal and some other apps to mitigate it</li>
+                    <li> If operator's servers are compromised. Verify security code in Signal and some other apps to mitigate it</li>
                     <li> Does not protect users' metadata privacy</li>
                     <li> While P2P are distributed, they are not federated — they operate as a single network</li>
                     <li> P2P networks either have a central authority or the whole network can be compromised - <a class="underline text-primary-light dark:text-primary-dark underline-offset-2" href="https://github.com/simplex-chat/simplex-chat/blob/stable/docs/SIMPLEX.md#comparison-with-p2p-messaging-protocols">see here</a></li>
