--- a/zh_Hant/index.html
+++ b/zh_Hant/index.html
@@ -912,7 +912,7 @@ window.addEventListener('scroll',changeHeaderBg);
     線上零售商知道收入較低的人更有可能進行緊急購物，因此他們可能收取較高的價格或取消折扣。
 </p>
 <p>
-    Some financial and insurance companies use social graphs to determine interest rates and premiums. It often makes people with lower incomes pay more — it is known as <a href="https://fairbydesign.com/povertypremium/" target="_blank">'poverty premium'</a>.
+    Some financial and insurance companies use social graphs to determine interest rates and premiums. It often makes people with lower incomes pay more — it is known as <a href="https://fairbydesign.com/povertypremium/" target="_blank">"poverty premium"</a>.
 </p>
 <p>
     SimpleX 網路比任何其他方式都能更好地保護您的連線隱私，完全防止您的社交圖表被任何公司或組織獲得。即使使用 SimpleX Chat 應用程式中預設的伺服器，伺服器操作員也不會知道使用者的數量或他們的連線。
