deploy: 6ee7f10a355e036f757578b1da276d850b02b5c8

--- a/ar/fdroid/index.html
+++ b/ar/fdroid/index.html
@@ -663,7 +663,7 @@ window.addEventListener('scroll',changeHeaderBg);
                 <div class="flex flex-col-reverse sm:flex-row gap-4">
                     <div>
                         <p class="mb-2 text-lg font-medium mt-6">الإصدارات الثابتة والتجريبية التي أنشأها المطورون</p>
-                        <p>لإضافته إلى عميل F-Droid، <span class="hide-on-mobile">امسح رمز QR أو</span> استخدم عنوان URL هذا:</p>
+                        <p>لإضافته إلى عميل F-Droid ،<span class="hide-on-mobile">امسح رمز QR أو</span> استخدم عنوان URL هذا:</p>
                         <a class="mb-2 break-words text-primary-light dark:text-primary-dark block text-left rtl:text-right text-[14px] xl:text-[16px] leading-[34px] underline-offset-2" href="https://app.simplex.chat/fdroid/repo?fingerprint=9F358FF284D1F71656A2BFAF0E005DEAE6AA14143720E089F11FF2DDCFEB01BA">
                             <code>https://app.simplex.chat/fdroid/repo</code>
                         </a>
@@ -686,7 +686,7 @@ window.addEventListener('scroll',changeHeaderBg);
                 <a class="inline-block" href="https://f-droid.org/en/packages/chat.simplex.app/" target="_blank" title="SimpleX F-Droid Repository"><img class="h-[40px] w-auto" src="/img/new/f_droid.svg"></a>
                 <p class="mb-2 text-lg font-medium mt-6">الإصدارات الثابتة التي تم إنشاؤها بواسطة F-Droid.org</p>
                 <p class="mb-2">تتم الإصدارات إلى هذا المستودع بعد عِدة أيام.</p>
-                <p class="mb-2">مستودعات SimpleX Chat و F-Droid.org مبنية على مفاتيح مختلفة. للتبديل، يُرجى <a href="/docs/guide/chat-profiles.html#move-your-chat-profiles-to-another-device">تصدير</a> قاعدة بيانات الدردشة وإعادة تثبيت التطبيق.</p>
+                <p class="mb-2">مستودعات SimpleX Chat و F-Droid.org مبنية على مفاتيح مختلفة. للتبديل، يُرجى <a href="/docs/guide/chat-profiles.html#move-your-chat-profiles-to-another-device">صدّر</a> قاعدة بيانات الدردشة وأعد تثبيت التطبيق.</p>
             </div>
         </div>
 
